@@ -1,3 +1,8 @@
+2012-05-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/53465
+	* gcc.c-torture/execute/pr53465.c: New test.
+
 2012-05-23  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/53389
