@@ -1,3 +1,13 @@
+2012-05-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/53465
+	* tree-vrp.c (extract_range_from_cond_expr): First copy_value_range
+	vr0 into *vr, then vrp_meet that.
+	(vrp_meet): If one vr type is VR_UNDEFINED, ensure the result doesn't
+	have any equivalences.
+	(vrp_visit_phi_node): Call copy_value_range instead of vrp_meet the
+	first time.
+
 2012-05-23  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gimple.c (gimple_types_compatible_p_1) <ARRAY_TYPE>: Remove bogus
